--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Test project for eagleowl.",
   "main": "index.js",
   "scripts": {
+    "dev": "live-server",
     "deploy": "gh-pages -d out",
     "predeploy": "copyfiles -f ./index.* out",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/ankitkumarspanion/eagleowl-test#readme",
   "devDependencies": {
     "copyfiles": "^2.3.0",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "live-server": "^1.2.1"
   }
 }
